# winner-tilt-ai

./: .gitignore  PROJECT_AUDIT.md  PROJECT_CLEANUP.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  test_winner_tilt_backtest_engine_v2.py  test_winner_tilt_portfolio_engine_v1.py  test_winner_tilt_research_engine_v1.py  test_winner_tilt_scoring_engine_v1.py  universe-methodology-v1.0.md  universe-v1.0.csv  winner-tilt-backtest-schema-v2.sql  winner-tilt-business-model-modules-v1.0.csv  winner-tilt-m5-completion-report-v1.0.md  winner-tilt-m5-test-results-v1.0.txt  winner-tilt-m6-prototype-events-v1.0.json  winner-tilt-m6-upload-guide-v1.0.md  winner-tilt-project-file-audit-m4.md  winner-tilt-project-manifest-v1.4.json  winner-tilt-prototype-portfolio-run-v1.0.json  winner-tilt-prototype-score-run-v1.0.json  winner-tilt-research-config-v1.0.0.json  winner-tilt-research-policy-v1.0.md  winner-tilt-scoring-engine-v1.0-frozen.md  winner-tilt-scoring-engine-v1.0.md  winner-tilt-spec-v1.2.md  winner-tilt-synthetic-observations-v1.0.csv  winner_tilt_backtest_engine_v2.py  winner_tilt_scoring_engine_v1.py
archive/: winner-tilt-project-manifest-v1.1.json  winner-tilt-project-manifest-v1.2.json  winner-tilt-project-manifest-v1.3.json  winner-tilt-spec-v1.1.md  winner-tilt-spec-v1.3.md  winner_tilt_backtest_engine_v1.py
config/: winner-tilt-backtest-config-v2.0.0.json  winner-tilt-data-validation-v1.0.0.json  winner-tilt-portfolio-config-v1.0.0.json  winner-tilt-project-manifest-v1.4.json  winner-tilt-providers-v1.0.0.json  winner-tilt-schedules-v1.0.0.json  (+4 more)
(+122 files in other folders)
