[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "winner-tilt-ai"
version = "1.6.0"
description = "Deterministic scoring, portfolio, backtest, and research engines for Winner Tilt AI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Winner Tilt AI" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
dashboard = ["streamlit>=1.36"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
